--- a/fireworks/fireworks.css
+++ b/fireworks/fireworks.css
@@ -3,6 +3,11 @@ html, body {
 	padding: 0;
 	overflow: hidden;
 }
+@font-face {
+  font-family: 'Arvo';
+  font-display: auto;
+  src: local('Arvo'), url(https://fonts.gstatic.com/s/arvo/v9/rC7kKhY-eUDY-ucISTIf5PesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+}
 
 body {
 	background: #171717;
