--- a/src/routes/dash/style.scss
+++ b/src/routes/dash/style.scss
@@ -5,7 +5,6 @@
   font:  16px Roboto, sans-serif;
   text-align: center;
   margin: 5px 40px;
-  background:#345;
 
 }
 
@@ -21,4 +20,8 @@
 .green {
   background: #519428 !important;
   width: 120px;
+}
+.info {
+  height:250px;
+  margin:20px;
 }
