--- a/src/routes/step1/style.scss
+++ b/src/routes/step1/style.scss
@@ -57,7 +57,8 @@ button  {
 }
 .green {
     background:#519428 !important;
-    width: 120px;;
+    width: 120px;
+  line-height: 13px;
 }
 @media only screen and (max-width: 360px) {
     .beta {
