--- a/src/routes/outcome/style.scss
+++ b/src/routes/outcome/style.scss
@@ -50,6 +50,7 @@ button  {
 .green {
     background:#519428 !important;
     width: 120px;;
+  line-height: 13px;
 }
 @media only screen and (max-width: 360px) {
     .beta {
