--- a/src/routes/almosthere/style.scss
+++ b/src/routes/almosthere/style.scss
@@ -5,16 +5,13 @@
 	min-height: 100%;
 	width: 100%;
     color: white;
-    background: black !important;
 }
 
 .cardHeader {
   padding: 8px;
-  background: black;
 }
 
 .mini {
-     background: black;
  }
 
 .cardBody {
@@ -22,7 +19,6 @@
 }
 
 .header {
-    background:black !important;
 }
 .currentUser {
     padding:0;
@@ -55,8 +51,8 @@ button  {
     color: white ;
 
 }
-.green {
-    background:#519428 !important;
+.rose {
+    background:#FF008C !important;
     width: 120px;;
   line-height: 13px;
 }
