--- a/src/routes/dash/style.scss
+++ b/src/routes/dash/style.scss
@@ -1,28 +1,9 @@
-.home {
-  background:#345;
-}
-.smaller {
-  font:  16px Roboto, sans-serif;
-  text-align: center;
-  margin: 5px 40px;
+.dash {
+  padding-top:56px;
+  background:black;
 
-}
-
-.beta {
-  font:  bold 20px Roboto, sans-serif;
-  text-align: center;
-}
-
-.cent {
-  margin:20px auto;
-  text-align: center;
-}
-.green {
-  background: #519428 !important;
-  width: 120px;
-  line-height: 13px;
 }
 .info {
-  height:250px;
-  margin:20px;
+    height:250px;
+    margin:20px;
 }
