--- a/src/routes/moreinfo/style.scss
+++ b/src/routes/moreinfo/style.scss
@@ -5,16 +5,13 @@
 	min-height: 100%;
 	width: 100%;
     color: white;
-    background: black !important;
 }
 
 .cardHeader {
   padding: 8px;
-  background: black;
 }
 
 .mini {
-     background: black;
  }
 
 .cardBody {
@@ -22,7 +19,6 @@
 }
 
 .header {
-    background:black !important;
 }
 .main {
     margin:5px;
@@ -60,8 +56,8 @@ button  {
     color: white !important;
 
 }
-.green {
-    background:#519428 !important;
+.rose {
+    background:#FF008C !important;
     width: 120px;
   line-height: 13px;
 }
