Fixed small phone scrolls

--- a/Unused/leaderboard/style.scss
+++ b/Unused/leaderboard/style.scss
@@ -43,3 +43,16 @@
   width:50%;
   display:inline-block;
 }
+.scoreBox {
+  height:24px;
+  width: 38px;
+  font: Bold 17px 'Comfortaa', sans-serif;
+  text-align:center;
+  display:inline-block;
+  padding:3px;
+  margin:3px;
+  background:white;
+  border:1px solid black;
+  border-radius: 5px;
+}
+
