--- a/src/components/pfooter/style.scss
+++ b/src/components/pfooter/style.scss
@@ -1,78 +1,92 @@
 $icon_size: 40px;
 
 .footer {
-	padding: 4px 0px !important;
-	margin-top:0px;
-	width: 100%;
-	height:78px;
-	position:absolute;
-	bottom:0;
-	max-width: 500px;
-	background:black;
+  padding: 4px 0px;
+  margin-top: 0px;
+  width: 100%;
+  height: 75px;
+  position: absolute;
+  bottom: 0px;
+  background: black;
+  max-width:500px;
+  vertical-align:bottom;
+
 }
+
 .playsc {
-	background:white;
-	font:  bold 20px/24px Comfortaa, sans-serif;
-	color:#000;
-	padding: 0px 4px;
-	flex: none;
-	width:100%;
+  background: white;
+  font: bold 20px/24px Comfortaa, sans-serif;
+  color: #000;
+  padding: 0px 4px;
+  flex: none;
+  width: 100%;
+  height:24px;
 }
+
 .rateIt {
-	text-align:left;
-	position:relative;
-	margin: 5px auto;
-	font:  bold 21px/24px Comfortaa, sans-serif;
+  text-align: left;
+  position: relative;
+  margin: 5px auto;
+  font: bold 21px/24px Comfortaa, sans-serif;
 
 }
 
-.bots {	width:100%;
-	margin: 5px 0;
+.bots {
+  width: 100%;
+  margin: 5px 0;
+  height:36px;
+padding:4px 0;
 
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	flex-flow: row wrap;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-flow: row wrap;
 }
+
 .lefty {
-	width: 100px;
-	font:  bold 21px/24px Comfortaa, sans-serif;
-	margin: 5px auto;
+  width:90px;
+  font: bold 21px/24px Comfortaa, sans-serif;
+  margin: 2px auto;
 }
 
 .buts {
-	margin:auto;
+  margin: auto;
 }
+
 .bots button {
-	border-radius: 32px;
-	height: 32px;
-	color: white !important;
-	font:  bold 15px Comfortaa, sans-serif;
-	text-transform: lowercase;
-	margin-left:5px;
-
+  border-radius: 32px;
+  height: 32px;
+  color: white !important;
+  font: bold 15px Comfortaa, sans-serif;
+  text-transform: lowercase;
+  margin-left: 5px;
 }
+
 .orangeButton {
-	background: #EF7D16 !important;
+  background: #EF7D16 !important;
 
 }
+
 .dkBlueButton {
-	background: #073763 !important;
+  background: #073763 !important;
 }
+
 .yellowButton {
-	background: #FFB600 !important;
+  background: #FFB600 !important;
 }
+
 .pinkButton {
-	background: #FF008C !important;
+  background: #FF008C !important;
 }
 
 .tiny {
-	color: #777;
-	font: Bold 10px 'Orbitron', sans-serif;
-	padding-top: 0px;
-	width: 100%;
-	text-align: center;
+  color: #777;
+  font: Bold 10px 'Orbitron', sans-serif;
+  padding-top: 0px;
+  width: 100%;
+  text-align: center;
 }
+
 @media (max-width: 479px) {
 	.mdc-layout-grid {
 		-webkit-box-sizing: border-box;
@@ -80,5 +94,18 @@ $icon_size: 40px;
 		margin: 0 auto;
 		padding: 4px !important;;
 		padding: var(--mdc-layout-grid-margin-phone, 4px) !important;
+	}
+	.lefty {
+		margin-top:10px;
+		font: bold 15px/14px Comfortaa, sans-serif;
+
+	}
+	.bots button {
+		color: white !important;
+		font: bold 16px Comfortaa, sans-serif !important;
+		margin-left: 3px;
+	}
+	.bots {
+		margin: 3px 0;
 	}
 }
