--- a/src/components/pfooter/style.scss
+++ b/src/components/pfooter/style.scss
@@ -88,6 +88,7 @@ padding:4px 0;
 }
 
 @media (max-width: 479px) {
+
 	.mdc-layout-grid {
 		-webkit-box-sizing: border-box;
 		box-sizing: border-box;
@@ -108,4 +109,22 @@ padding:4px 0;
 	.bots {
 		margin: 3px 0;
 	}
+}
+@media (max-width: 320px) {
+  #app {
+    width:320px;
+  }
+  .lefty {
+    margin-top: 10px;
+    font: bold 13px Comfortaa, sans-serif;
+
+  }
+  .bots button {
+    color: white !important;
+    font: bold 13px Comfortaa, sans-serif !important;
+    margin-left: 2px;
+  }
+  .bots {
+    margin: 3px 0;
+  }
 }
