--- a/src/routes/dark/style.scss
+++ b/src/routes/dark/style.scss
@@ -1,9 +1,11 @@
 .dark {
-	height: 100%;
+	height: 100vh;
 	width: 100%;
     background:black;
     z-index: 10;
     max-width: 500px;
+  margin:0 auto;
+  text-align:center;
 }
 
 .hint {
