--- a/src/routes/dash/style.scss
+++ b/src/routes/dash/style.scss
@@ -1,5 +1,5 @@
-$boxh: 100px;
-$boxw: 135px;
+$boxh: 180px;
+$boxw: 185px;
 
 #app {
   width: 100% !important;
@@ -25,26 +25,33 @@ $boxw: 135px;
   position: absolute;
   width: $boxw;
   height: $boxh;
-  top: 50%;
-  background: #FF008c;
-  color:white;
+  top: 40%;
   z-index:10000;
   -ms-transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
+  animation: pulse 4s infinite;
+  background-image: url("../../assets/img/msgframepink.png");
+  background-size:contain;
+  background-repeat: no-repeat;
+
+
+}
+.bonus {
+  color:white;
   font: Bold 16px 'Comfortaa', sans-serif;
   text-align:center;
-  padding:10px;
-  animation: pulse 4s infinite
+  padding:30px 10px;
+  vertical-align: middle;
 
 }
 @keyframes pulse
 {
   0%, 100% {
-  transform: translate(-50%, -50%) scale(0.85) rotate(-10deg);
+  transform: translate(-50%, -50%) scale(0.45) rotate(-15deg);
 
   }
   50% {
-    transform: translate(-50%, -50%) scale(1.15) rotate(10deg);
+    transform: translate(-50%, -50%) scale(1.15) rotate(15deg);
   }
 
 }
