--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,127 +1,147 @@
 @import url('//fonts.googleapis.com/css?family=Comfortaa');
+
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html, body {
-    width:100%;
-    height:100%;
-	padding: 0;
-	margin: 0;
-	font-family: 'Comfortaa', sans-serif;
-	font-weight: 400;
-	color: #FFF;
-    background: rgb(2,0,36);
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 400;
+    color: #FFF;
+    background: rgb(2, 0, 36);
 
     -webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    -moz-osx-font-smoothing: grayscale;
 }
+
 @font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialicons/v29/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2) format('woff2');
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/materialicons/v29/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2) format('woff2');
 }
 
 .material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
 }
 
 
 #app {
     margin: 0 auto;
-    text-align:center;
+    text-align: center;
+    max-width: 500px;
+    display: block;
 
-    background: linear-gradient(356deg, rgba(2,0,36,1) 0%, rgba(102,51,153,1) 93%);
-    background: -moz-linear-gradient(356deg, rgba(2,0,36,1) 0%, rgba(102,51,153,1) 93%);
-    background: -webkit-linear-gradient(356deg, rgba(2,0,36,1) 0%, rgba(102,51,153,1) 93%);
-    background: linear-gradient(356deg, rgba(2,0,36,1) 0%, rgba(102,51,153,1) 93%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#663399",GradientType=1);
+    background: linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
+    background: -moz-linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
+    background: -webkit-linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
+    background: linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024", endColorstr="#663399", GradientType=1);
 
 }
+
 #notification-wrapper, .toast-notification {
     font: Bold 17px 'Comfortaa', sans-serif;
 
 }
+
 header {
     max-width: 500px;
-    width:100%;
+    width: 100%;
     margin: 0 auto;
-    text-align:center;
+    text-align: center;
 
 }
 
-.dark_blue{
-    background:#073763 !important;
+.dark_blue {
+    background: #073763 !important;
 }
+
 .light_blue {
     background: #007CE2 !important;
 }
+
 .pink {
     background: #FF008C !important;
 }
+
 .yellow {
     background: #FFB600 !important;
-    color:black !important;
+    color: black !important;
 }
+
 .orange {
     background: #EF7D16 !important;
 }
+
 .white {
     background: #F7F7F7 !important;
 }
+
 .black {
     background: #2A2A2A !important;
 
 }
 
 #app .page {
-  padding-top: 56px;
+    padding-top: 56px;
 }
+
 .mdc-top-app-bar {
     background: #45196F !important;
-    width:100%;
-    position:relative !important;
+    width: 100%;
+    position: relative !important;
 
 }
-.mdc-top-app-bar__title{
-    width:100%;
+
+.mdc-top-app-bar__title {
+    width: 100%;
 
 }
+
 .mdc-card .grid {
-	color:black;
-	background: #74FBFD;
-	border:1px solid #777;
+    color: black;
+    background: #74FBFD;
+    border: 1px solid #777;
 
 }
+
 .dim {
     opacity: .3;
 }
-.home {
-    padding: 5px;
-    min-height: 100%;
+
+#home {
     width: 100%;
+    min-height: 100vh;
+    max-width: 500px;
+    text-align: center;
+    margin: 0 auto;
     color: white;
-    border:1px solid #777;
+    border: 1px solid #333;
 }
 
 .logo {
-    margin-top:50px;
-    width:100%;
-    text-align:center;
+    margin-top: 5px;
+    width: 100%;
+    text-align: center;
 }
+
 .urup {
     background-image: url("../assets/img/logo.png");
     background-repeat: no-repeat;
@@ -130,31 +150,41 @@ header {
     height: 70px;
     width: 70px;
 }
-.smaller {
-    font:  bold 20px/24px Comfortaa, sans-serif;
+
+.small {
+    font: normal 25px/35px Comfortaa, sans-serif;
     text-align: center;
-    margin: 5px 5px;
+    margin: 18px;
 }
+
+.smaller {
+    font: bold 20px/21px Comfortaa, sans-serif;
+    text-align: center;
+    margin: 5px 25px;
+}
+
 .smallest {
-    font:  bold 10px/14px Comfortaa, sans-serif;
+    font: bold 10px/14px Comfortaa, sans-serif;
     text-align: left;
     margin: 5px 5px;
 }
+
 .left {
-    text-align:left;
+    text-align: left;
 }
+
 .beta {
     background-image: url("../assets/img/beta.png");
     background-repeat: no-repeat;
     background-size: 63px 43px;
     display: inline-block;
     height: 63px;
-    width:63px;
+    width: 63px;
     animation: roto 5s infinite
 
 }
-@keyframes roto
-{
+
+@keyframes roto {
     0%, 100% {
         transform: rotate(-10deg);
 
@@ -165,13 +195,12 @@ header {
 }
 
 .cent {
-    margin:20px auto;
+    margin: 20px auto;
     text-align: center;
 }
 
 
-@keyframes shadow-pulse
-{
+@keyframes shadow-pulse {
     0% {
         transform: scale(0.75);
 
@@ -182,65 +211,129 @@ header {
 
 }
 
-.btn1
-{
+.btn1 {
     animation: shadow-pulse 1s infinite;
-    animation-delay:1s;
+    animation-delay: 1s;
 
 }
 
-.btn2
-{
+.btn2 {
     animation: shadow-pulse 1s infinite;
-    animation-delay:1.3s;
+    animation-delay: 1.3s;
 
 }
-.btn3
-{
+
+.btn3 {
     animation: shadow-pulse 1s infinite;
-    animation-delay:1.5s;
+    animation-delay: 1.5s;
 
 }
-.btn4
-{
+
+.btn4 {
     animation: shadow-pulse 1s infinite;
-    animation-delay:1.7s;
+    animation-delay: 1.7s;
 
 }
-.btn5
-{
+
+.btn5 {
     animation: shadow-pulse 1s infinite;
-    animation-delay:1.9s;
+    animation-delay: 1.9s;
 
 }
+
+#toastBox {
+    display: block;
+    padding: 0;
+}
+
 .toast-notification {
-    max-width: 180px;
-    display:block;
-    font:  bold 19px/25px Comfortaa, sans-serif;
+    display: block;
+    font: bold 19px/25px Comfortaa, sans-serif;
+    width: 200px !important;
+    height: 150px;
 
 }
+.toast-notification span {
+    margin-top:5px;
+
+}
+
+.intro {
+    background: #888 !important;
+
+}
+
 .mdc-drawer--modal, .mdc-drawer-container {
 
-    left:inherit !important;
+    left: inherit !important;
 }
+
+.snoozeBox .toast-notification {
+    background-image: url("../assets/img/bluebubble.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+    margin-top: 10px;
+    padding-top: 5px;
+
+}
+
+.orangeBox .toast-notification {
+    /*background-color: #EF7D16;*/
+    background-image: url("../assets/img/orange.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+    margin-top: 10px;
+    padding-top: 5px;
+
+}
+
+.pinkBox .toast-notification {
+    /*background-color: #EF7D16;*/
+    background-image: url("../assets/img/msgframepink.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+    margin-top: 10px;
+    padding-top: 5px;
+
+}
+
+
+
 @media only screen and (max-width: 360px) {
+    html, body, #app {
+        width: 360px;
+    }
+
     .beta {
-        font:  bold 32px Comfortaa, sans-serif;
+        font: bold 32px Comfortaa, sans-serif;
     }
+
     .smaller {
-        font:  bold 20px/24px Comfortaa, sans-serif;
-        margin: 5px 5px;
+        font: bold 18px Comfortaa, sans-serif;
+        margin: 5px 15px;
     }
+
     .shape {
-        font:  bolder 20px Comfortaa, sans-serif;
+        font: bolder 20px Comfortaa, sans-serif;
         margin: 2px 24px 0;
     }
+
     .cent {
-        margin:10px auto;
+        margin: 10px auto;
         text-align: center;
     }
+
     html, body {
         width: 100%;
         height: 100%;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    html, body, #app {
+        width: 320px;
     }
 }
