--- a/src/components/survey1/style.scss
+++ b/src/components/survey1/style.scss
@@ -18,21 +18,22 @@
 
 .vote {
   background: #FF008C;
-  border-radius: 20px;
+  border-radius: 22px;
   display: inline-block;
-  height: 40px;
+  height: 44px;
   opacity: 1;
   position: relative;
   text-align: center;
   vertical-align: middle;
-  width: 40px;
-  margin: 0 10px;
+  width: 44px;
+  margin: 0 11px;
   color:white !important;
   font-weight: bold;
   padding-top:10px;
   animation-direction: alternate;
   animation-timing-function: ease-in;
   animation-fill-mode: forwards;
+  border:4px solid #ef7d16;
 
   &.YES {
     opacity:.6;
@@ -45,7 +46,7 @@
 
 .num {
   color: white;
-  font: Bold 23px 'Comfortaa', sans-serif;
+  font: Bold 23px/21px 'Comfortaa', sans-serif;
 }
 .tiny {
   color: #444;
