--- a/src/routes/outcome/style.scss
+++ b/src/routes/outcome/style.scss
@@ -35,12 +35,15 @@
 .headTxt {
   font: bold 20px Comfortaa, sans-serif;
   text-align: left;
-  margin: 14px 5px 9px 9px;
-  float:left;
+  margin: 7px;
+  top: 5px;
+  left: 5px;
+  position:relative;
+
 }
 .snoozeScore {
-  font: normal 25px Comfortaa, sans-serif;
-  text-align: center;
+  font: normal 19px Comfortaa, sans-serif;
+  text-align: left;
   color: #ef7d16;
   display:block;
 }
@@ -48,8 +51,6 @@
   display:block;
   clear:both;
   margin:5px;
-  height:166px;
-  vertical-align: middle;
 }
 .snoozeSec button {
   top:20px;
