Lotsa logic tweaks

--- a/Unused/topplayers/style.scss
+++ b/Unused/topplayers/style.scss
@@ -75,7 +75,7 @@
   margin:3px 5px;
   border:1px solid #333;
   border-radius:5px;
-  background-image:  url("../../assets/img/diamond.jpg");
+  background-image:  url("../../src/assets/img/diamond.jpg");
   background-size: 28px 28px;
   background-repeat: no-repeat;
   background-color:  #363;
