--- a/src/components/countdown/style.scss
+++ b/src/components/countdown/style.scss
@@ -20,6 +20,28 @@
   top: 18px;
   z-index: 3;
 }
+.intro {
+  height:180px;
+  width:180px;
+  background: linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
+  background: -moz-linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
+  background: -webkit-linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
+  background: linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024", endColorstr="#663399", GradientType=1);
+  z-index: 13;
+  text-align:center;
+  margin:100px auto;
+  border:5px solid #EF7D16;
+  border-radius: 25px;
+  padding:20px;
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font: normal 20px/22px Comfortaa, sans-serif;
+
+}
 
 .loader {
   animation-duration: 2s;
