--- a/src/routes/metrics/style.scss
+++ b/src/routes/metrics/style.scss
@@ -22,3 +22,17 @@ td {
 td {
   border: solid 1px $table-border;
 }
+.dates {
+  color: #888;
+  font-size:9px;
+  padding-bottom:13px;
+  text-align:right;
+  margin-left:10px;
+}
+.comments {
+   color: #000;
+   font-size:9px;
+  padding-bottom:2px;
+  margin-bottom:2px;
+   border-bottom: 1px dashed #EF7D15;
+ }
