Larger Font for Textarea

--- a/src/routes/lastPage/style.scss
+++ b/src/routes/lastPage/style.scss
@@ -41,6 +41,8 @@ $toast_color: #FF008c;
   background-color: #ddd;
   resize: none;
   margin: 5px;
+  font: bold 18px Comfortaa, sans-serif;
+
 }
 
 .buts input {
